--- a/Main/LoginPage/loginpagestyle.css
+++ b/Main/LoginPage/loginpagestyle.css
@@ -1,8 +1,4 @@
 body{
-    background-image: url('Images/Image-3.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 60%;
     font-family: Poppins, sans-serif;
     }
     
@@ -10,10 +6,16 @@ body{
     height: 100%;
     align-content: center;
     }
+#banner{
+        background: linear-gradient(rgba(0,0,0,0.2),#88e9df), url("Images/Image-2.jpg");
+        background-size: cover;
+        background-position: center;
+        height: 100vh;
+   }
     
 .card{
     height: 540px;
-    margin-top: 160px;
+    margin-top: 200px;
     margin-bottom: auto;
     width: 500px;
     background-color: rgba(0, 0, 0, 0.76) !important;    
@@ -138,9 +140,10 @@ input:focus{
         position: absolute;
         right:0px;
         margin-right: 30px;
+        color: #f1f1f1;
+
 }
-    
-.overlay {
+  .overlay {
         height: 100%;
         width: 0;
         position: fixed;
@@ -150,15 +153,14 @@ input:focus{
         background-color:#009688;
         overflow-x: hidden;
         transition: 0.5s;
+
 }
       
 .overlay-content {
         position: relative;
         top: 20%;
-        width: 30%;
         text-align: center;
-        margin-top: 10px;
-        margin-left: 50px;
+        margin:auto;
     
 }
      
@@ -188,6 +190,113 @@ input:focus{
     top: 4%;
     left:6%;
 }
+
       
+#footer{
+    width: 100%;
+    padding: 100px 20px;
+    background: #D3D3D3;
+
+}
+
+.title_text{
+    text-align: center;
+    padding-bottom: 70px;
+}
+
+.title_text p{
+    font-size: 30px;
+    margin: auto;
+    color: #009688;
+    font-weight: bold ;
+    z-index: 1;
+    position: relative;
+    display: inline-block;
+
+}
+
+.title_text p::after{
+    content: '';
+    width: 50px;
+    height: 35px;
+    background: linear-gradient(#019587, #fff);
+    position: absolute;
+    top: -20px;
+    right :0;
+    left: 0;
+    z-index: -1;
+    transform: rotate(4deg);
+    border-top-left-radius: 45px;
+    border-bottom-right-radius: 45px;
+
     
-    
+}
+
+.title_text h1{
+    font-size: 50px;
+}
+
+     
+#footer{
+    padding: 40px 0 20px;
+    background: #efefef;
+
+}
+
+.footer_row{
+    width:80%;
+    margin: 0 auto;
+    display : flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer_left, .footer_right{
+    flex-basis: 45%;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.footer_right{
+    text-align: right;
+}
+
+.footer_row h1{
+    margin: 10px 0;
+}
+
+.footer_row p{
+    line-height: 35px;
+}
+
+.footer_left .fas, .footer_right .fas{
+    font-size: 20px;
+    margin: 10px;
+    color: #009688;
+
+}
+
+.Social_links{
+    text-align: center;
+}
+
+
+.Social_links .fab{
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    font-size: 30px;
+    line-height: 40px;
+    border: 2px solid #009688;
+    cursor: pointer;
+    margin: 40px 5px 0;
+    color: #009688;
+    transition: 0.5s;
+
+}
+.Social_links .fab:hover{
+    background: #009688;
+    color: #fff;
+    transform: translateY(-7px);
+
+}
