--- a/Main/SignUp/forgotpasswordstyle.css
+++ b/Main/SignUp/forgotpasswordstyle.css
@@ -1,9 +1,9 @@
-html,body {
+body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     color: rgb(0, 0, 0);
-    font-family: "Helvetica", Arial, sans-serif;
+    font-family: Poppins, sans-serif;
     font-size: 18px;
     font-weight: normal;
     line-height: 1.5;
@@ -20,6 +20,7 @@ html,body {
     background-color: rgb(255, 255, 255) !important;
 
 }
+
 
 .padding-bottom-3x {
     padding-bottom: 72px !important
@@ -87,3 +88,66 @@ p1{
     outline: 0;
     box-shadow: 0 0 0 0px #28a745
 }
+
+     
+
+
+.title_text{
+    text-align: center;
+    padding-bottom: 70px;
+}
+
+.title_text p{
+    font-size: 30px;
+    margin: auto;
+    color: #009688;
+    font-weight: bold ;
+    z-index: 1;
+    position: relative;
+    display: inline-block;
+
+}
+
+.title_text p::after{
+    content: '';
+    width: 50px;
+    height: 35px;
+    background: linear-gradient(#019587, #fff);
+    position: absolute;
+    top: -20px;
+    right :0;
+    left: 0;
+    z-index: -1;
+    transform: rotate(4deg);
+    border-top-left-radius: 45px;
+    border-bottom-right-radius: 45px;
+
+    
+}
+
+.title_text h1{
+    font-size: 50px;
+}
+
+     
+#footer{
+    width: 100%;
+    padding: 100px 20px;
+    background: #efefef;
+
+}
+
+.footer_row{
+    width:80%;
+    margin: 0 auto;
+    display : flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer_left, .footer_right{
+    flex-basis: 45%;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+    
