--- a/Main/SignUp/signupstyle.css
+++ b/Main/SignUp/signupstyle.css
@@ -6,7 +6,7 @@ body{
     }
 
 #S_Banner{
-        background: linear-gradient(rgba(255, 255, 255, 0.2),#776a6a), url("Images/Image-3.jpg");
+        background: linear-gradient(rgba(255, 255, 255, -0.1),#323636), url("Images/Image-3.jpg");
         background-size: cover;
         background-position: center;
         height: 100vh;
@@ -112,8 +112,8 @@ input:focus{
     position: absolute;
     right:0px;
     margin-right: 30px;
+    color: white;
 }
-
 .overlay {
     height: 100%;
     width: 0;
@@ -129,11 +129,8 @@ input:focus{
   .overlay-content {
     position: relative;
     top: 20%;
-    width: 30%;
     text-align: center;
-    margin-top: 10px;
-    margin-left: 50px;
-
+    margin:auto;
   }
   
   .overlay a {
@@ -163,7 +160,115 @@ input:focus{
     left:6%;
 }
 
+     
+#footer{
+    width: 100%;
+    padding: 100px 20px;
+    background: #D3D3D3;
+
+}
+
+.title_text{
+    text-align: center;
+    padding-bottom: 70px;
+}
+
+.title_text p{
+    font-size: 30px;
+    margin: auto;
+    color: #009688;
+    font-weight: bold ;
+    z-index: 1;
+    position: relative;
+    display: inline-block;
+
+}
+
+.title_text p::after{
+    content: '';
+    width: 50px;
+    height: 35px;
+    background: linear-gradient(#019587, #fff);
+    position: absolute;
+    top: -20px;
+    right :0;
+    left: 0;
+    z-index: -1;
+    transform: rotate(4deg);
+    border-top-left-radius: 45px;
+    border-bottom-right-radius: 45px;
+
+    
+}
+
+.title_text h1{
+    font-size: 50px;
+}
+    
+
+     
+#footer{
+    padding: 40px 0 20px;
+    background: #efefef;
+
+}
+
+.footer_row{
+    width:80%;
+    margin: 0 auto;
+    display : flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer_left, .footer_right{
+    flex-basis: 45%;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.footer_right{
+    text-align: right;
+}
+
+.footer_row h1{
+    margin: 10px 0;
+}
+
+.footer_row p{
+    line-height: 35px;
+}
+
+.footer_left .fas, .footer_right .fas{
+    font-size: 20px;
+    margin: 10px;
+    color: #009688;
+
+}
+
+.Social_links{
+    text-align: center;
+}
 
 
+.Social_links .fab{
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    font-size: 30px;
+    line-height: 40px;
+    border: 2px solid #009688;
+    cursor: pointer;
+    margin: 40px 5px 0;
+    color: #009688;
+    transition: 0.5s;
+
+}
+.Social_links .fab:hover{
+    background: #009688;
+    color: #fff;
+    transform: translateY(-7px);
+
+}
      
 
