--- a/Main/LoginPage/loginpagestyle.css
+++ b/Main/LoginPage/loginpagestyle.css
@@ -7,10 +7,10 @@ body{
     align-content: center;
     }
 #banner{
-        background: linear-gradient(rgba(0,0,0,0.2),#88e9df), url("Images/Image-2.jpg");
+        background: linear-gradient(rgba(0,0,0,0.2),#88e9df), url("../Resources/Image-2.jpg");
         background-size: cover;
         background-position: center;
-        height: 100vh;
+        height: 120vh;
    }
     
 .card{
