--- a/Main/MapsPage/maps.css
+++ b/Main/MapsPage/maps.css
@@ -5,55 +5,73 @@ h1{
   padding-top: 100px;
 }
 
-.b_button{
-  margin: 10px auto;
-  margin-left: 0px;
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  text-align: center;
+*{
+  font-family: 'Poppins', sans-serif;
 }
-
-.b_button a{
-  width: 150px;
-  text-decoration: none;
-  display: inline-block;
-  margin: 0px 3px;
-  padding: 10px 0;
-  color: #fff;
-  border: 0.5px solid #fff;
-  position: relative;
-  z-index: 1;
-  transition: color 0.5s;
-
-}
-
-.b_button a span{
-  width:0%;
-  height: 100%;
-  position: absolute;
-  top:0;
-  left:0;
-  background: #fff;
-  z-index: -1;
-  transition: 0.5s;
-}
-
-.b_button a:hover span{ 
-  width:100%;
-}
-
-
-.b_button a:hover { 
-  color: #000;
-}
-
-
 #logo{
   position: absolute;
   top: 4%;
   left:10%;
 }
+
+
+
+#logo{
+  position: absolute;
+  top: 4%;
+  left:6%;
+}
+
+#span{
+  position: absolute;
+  right:0px;
+  margin-right: 30px;
+}
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color:#009688;
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 20%;
+  text-align: center;
+  margin:auto;
+
+}
+
+.overlay a {
+  padding: 20px;
+  text-decoration: none;
+  font-size: 25px;
+  color: black;
+  display: block;
+  transition: 0.3s;
+
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 40px;
+  font-size: 60px;
+}
+
+
+
+
 
 
 #contatti{
@@ -244,6 +262,7 @@ circle {
 
 .slide1 {
   background-image: url("https://cache.careers360.mobi/media/presets/860X430/article_images/2018/03/05/MIT-College-of_Engineering.webp");
+  
 }
 
 .slide2 {
@@ -251,14 +270,14 @@ circle {
 }
 
 .slide3 {
-  background-image: url("https://images.unsplash.com/photo-1490100667990-4fced8021649?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1600&h=900&fit=crop&s=247f52de1a292b8a1877b0c7dd77a291");
+  background-image: url("../Resources/Tuck\ Shop.jpeg");
 }
 
 .slide4 {
   background-image: url("https://i.pinimg.com/originals/6d/ee/45/6dee45a0895cb597c7ee2a863c6e87d9.jpg");
 }
 .slide5 {
-  background-image: url("https://img.jagranjosh.com/imported/images/institute/18177_Maharashtra%20Academy%20of%20Naval%20Education%20and%20Training%20(MANET),%20Pune.JPG");
+  background-image: url("../Resources/OLD\ SOE.JPG");
 }
 .slider {
   position: absolute;
@@ -277,7 +296,7 @@ circle {
   font-size: 62px;
   padding-top: 138px;
   font-weight: 800;
-  font-family: 'Heebo', sans-serif;
+  font-family: Poppins, sans-serif;
 
   text-align: center;
   width: 25%;
@@ -306,13 +325,118 @@ circle {
   stroke-width: 82px;
 }
 
-.row {
-  display: table-row;
-  height: 70%;
+
+.text1{
+  font-family: 'Kaushan Script';
+  padding-top: 0px;
 }
-.text{
-  color: white;
+
+
+.title_text{
+  text-align: center;
+  padding-bottom: 70px;
 }
+
+.title_text p{
+  font-size: 30px;
+  margin: auto;
+  color: #009688;
+  font-weight: bold ;
+  z-index: 1;
+  position: relative;
+  display: inline-block;
+
+}
+
+.title_text p::after{
+  content: '';
+  width: 50px;
+  height: 35px;
+  background: linear-gradient(#019587, #fff);
+  position: absolute;
+  top: -20px;
+  right :0;
+  left: 0;
+  z-index: -1;
+  transform: rotate(4deg);
+  border-top-left-radius: 45px;
+  border-bottom-right-radius: 45px;
+
+  
+}
+
+.title_text h1{
+  font-size: 50px;
+
+}
+
+    
+    
+#footer{
+  padding: 40px 0 20px;
+  background: #efefef;
+
+}
+
+.footer_row{
+  width:80%;
+  margin: 0 auto;
+  display : flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer_left, .footer_right{
+  flex-basis: 45%;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.footer_right{
+  text-align: right;
+}
+
+.footer_row h1{
+  margin: 10px 0;
+}
+
+.footer_row p{
+  line-height: 35px;
+}
+
+.footer_left .fas, .footer_right .fas{
+  font-size: 20px;
+  margin: 10px;
+  color: #009688;
+
+}
+
+.Social_links{
+  text-align: center;
+}
+
+
+.Social_links .fab{
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  font-size: 30px;
+  line-height: 40px;
+  border: 2px solid #009688;
+  cursor: pointer;
+  margin: 40px 5px 0;
+  color: #009688;
+  transition: 0.5s;
+
+}
+.Social_links .fab:hover{
+  background: #009688;
+  color: #fff;
+  transform: translateY(-7px);
+
+}
+   
+
 
 
 
