--- a/Main/IndexPage/Main.css
+++ b/Main/IndexPage/Main.css
@@ -1,493 +1,527 @@
-*{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    text-decoration: none;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-
+* {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-#banner{
-    background: linear-gradient(rgba(0,0,0,0.2),#18ccba), url("../Resources/Image-4.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-}
-
-#banner-text{
-    text-align: center;
-    color:#fff;
-    padding-top: 260px;
-
-
+#banner {
+  background: linear-gradient(rgba(0, 0, 0, 0.2), #18ccba),
+    url("../Resources/Image-4.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
 
-#banner-text h1{
-    font-size: 100px;
-    font-family: 'Kaushan Script', cursive; 
+#banner-text {
+  text-align: center;
+  color: #fff;
+  padding-top: 260px;
 }
 
-#banner-text p{
-    font-size: 20px;
-    font-style: italic;
+#banner-text h1 {
+  font-size: 100px;
+  font-family: "Kaushan Script", cursive;
 }
 
-
-
-.b_button{
-    margin: 10px auto;
-    margin-left: 0px;
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    text-align: center;
+#banner-text p {
+  font-size: 20px;
+  font-style: italic;
 }
 
-.b_button a{
-    width: 150px;
-    text-decoration: none;
-    display: inline-block;
-    margin: 0px 3px;
-    padding: 10px 0;
-    color: #fff;
-    border: 0.5px solid #fff;
-    position: relative;
-    z-index: 1;
-    transition: color 0.5s;
-
+.b_button {
+  margin: 10px auto;
+  margin-left: 0px;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  text-align: center;
 }
 
-.b_button a span{
-    width:0%;
-    height: 100%;
-    position: absolute;
-    top:0;
-    left:0;
-    background: #fff;
-    z-index: -1;
-    transition: 0.5s;
+.b_button a {
+  width: 150px;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0px 3px;
+  padding: 10px 0;
+  color: #fff;
+  border: 0.5px solid #fff;
+  position: relative;
+  z-index: 1;
+  transition: color 0.5s;
 }
 
-.b_button a:hover span{ 
-    width:100%;
+.b_button a span {
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #fff;
+  z-index: -1;
+  transition: 0.5s;
 }
 
-
-.b_button a:hover { 
-    color: #000;
+.b_button a:hover span {
+  width: 100%;
 }
 
-
-#logo{
-    position: absolute;
-    top: 4%;
-    left:10%;
+.b_button a:hover {
+  color: #000;
 }
 
-
-#AboutUs{
-    width: 100%;
-    padding: 70px 0;
-
+#logo {
+  position: absolute;
+  top: 4%;
+  left: 10%;
 }
 
-.title{
-    text-align: center;
-    padding-bottom: 70px;
+#AboutUs {
+  width: 100%;
+  padding: 70px 0;
 }
 
-.title p{
-    font-size: 30px;
-    margin: auto;
-    color: #009688;
-    font-weight: bold ;
-    z-index: 1;
-    position: relative;
-    display: inline-block;
-
+.title {
+  text-align: center;
+  padding-bottom: 70px;
 }
 
-.title p::after{
-    content: '';
-    width: 50px;
-    height: 35px;
-    background: linear-gradient(#019587, #fff);
-    position: absolute;
-    top: -20px;
-    right :0;
-    left: 0;
-    z-index: -1;
-    transform: rotate(4deg);
-    border-top-left-radius: 45px;
-    border-bottom-right-radius: 45px;
-
-    
+.title p {
+  font-size: 30px;
+  margin: auto;
+  color: #009688;
+  font-weight: bold;
+  z-index: 1;
+  position: relative;
+  display: inline-block;
 }
 
-.title h1{
-    font-size: 50px;
+.title p::after {
+  content: "";
+  width: 50px;
+  height: 35px;
+  background: linear-gradient(#019587, #fff);
+  position: absolute;
+  top: -20px;
+  right: 0;
+  left: 0;
+  z-index: -1;
+  transform: rotate(4deg);
+  border-top-left-radius: 45px;
+  border-bottom-right-radius: 45px;
 }
 
+.title h1 {
+  font-size: 50px;
+}
 
-
-
-#span{
-    position: absolute;
-    right:0px;
-    margin-right: 30px;
-    background-color:white;
+#span {
+  position: absolute;
+  right: 0px;
+  margin-right: 30px;
+  background-color: white;
 }
 
 .overlay {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    background-color:#009688;
-    overflow-x: hidden;
-    transition: 0.5s;
-  }
-  
-  .overlay-content {
-    position: relative;
-    top: 20%;
-    text-align: center;
-    margin:auto;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #009688;
+  overflow-x: hidden;
+  transition: 0.5s;
+}
 
-  }
-  
-  .overlay a {
-    padding: 20px;
-    text-decoration: none;
-    font-size: 25px;
-    color: black;
-    display: block;
-    transition: 0.3s;
+.overlay-content {
+  position: relative;
+  top: 20%;
+  text-align: center;
+  margin: auto;
+}
 
-  }
-  
-  .overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
-  }
-  
-  .overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 40px;
-    font-size: 60px;
-  }
-  
+.overlay a {
+  padding: 20px;
+  text-decoration: none;
+  font-size: 25px;
+  color: black;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover,
+.overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 40px;
+  font-size: 60px;
+}
+
 #cont {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-
-
-#info{
-    text-align: center;
-    padding-bottom: 70px;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-#info p{
-    font-size: 30px;
-    margin: auto;
-    color: #009688;
-    font-weight: bold ;
-    z-index: 1;
-    position: relative;
-    display: inline-block;
-
+#info {
+  text-align: center;
+  padding-bottom: 70px;
 }
 
-#info p::after{
-    content: '';
-    width: 50px;
-    height: 35px;
-    background: linear-gradient(#019587, #fff);
-    position: absolute;
-    top: -20px;
-    right :0;
-    left: 0;
-    z-index: -1;
-    transform: rotate(4deg);
-    border-top-left-radius: 45px;
-    border-bottom-right-radius: 45px;
-
-    
+#info p {
+  font-size: 30px;
+  margin: auto;
+  color: #009688;
+  font-weight: bold;
+  z-index: 1;
+  position: relative;
+  display: inline-block;
 }
 
-#info h2{
-    font-size: 50px;
+#info p::after {
+  content: "";
+  width: 50px;
+  height: 35px;
+  background: linear-gradient(#019587, #fff);
+  position: absolute;
+  top: -20px;
+  right: 0;
+  left: 0;
+  z-index: -1;
+  transform: rotate(4deg);
+  border-top-left-radius: 45px;
+  border-bottom-right-radius: 45px;
 }
 
-
-#creation{
-    text-align: center;
-    padding-bottom: 70px;
-    
-
+#info h2 {
+  font-size: 50px;
 }
 
-#creation p{
-    font-size: 30px;
-    margin: auto;
-    color: #009688;
-    font-weight: bold ;
-    z-index: 1;
-    position: relative;
-    display: inline-block;
-
+#creation {
+  text-align: center;
+  padding-bottom: 70px;
 }
 
-#creation p::after{
-    content: '';
-    width: 50px;
-    height: 35px;
-    background: linear-gradient(#019587, #fff);
-    position: absolute;
-    top: -20px;
-    right :0;
-    left: 0;
-    z-index: -1;
-    transform: rotate(4deg);
-    border-top-left-radius: 45px;
-    border-bottom-right-radius: 45px;
-
-    
+#creation p {
+  font-size: 30px;
+  margin: auto;
+  color: #009688;
+  font-weight: bold;
+  z-index: 1;
+  position: relative;
+  display: inline-block;
 }
 
-#creation h1{
-    font-size: 50px;
+#creation p::after {
+  content: "";
+  width: 50px;
+  height: 35px;
+  background: linear-gradient(#019587, #fff);
+  position: absolute;
+  top: -20px;
+  right: 0;
+  left: 0;
+  z-index: -1;
+  transform: rotate(4deg);
+  border-top-left-radius: 45px;
+  border-bottom-right-radius: 45px;
 }
 
-.title_text{
-    text-align: center;
-    padding-bottom: 70px;
+#creation h1 {
+  font-size: 50px;
 }
 
-.title_text p{
-    font-size: 30px;
-    margin: auto;
-    color: #009688;
-    font-weight: bold ;
-    z-index: 1;
-    position: relative;
-    display: inline-block;
-
+.title_text {
+  text-align: center;
+  padding-bottom: 70px;
 }
 
-.title_text p::after{
-    content: '';
-    width: 50px;
-    height: 35px;
-    background: linear-gradient(#019587, #fff);
-    position: absolute;
-    top: -20px;
-    right :0;
-    left: 0;
-    z-index: -1;
-    transform: rotate(4deg);
-    border-top-left-radius: 45px;
-    border-bottom-right-radius: 45px;
-
-    
+.title_text p {
+  font-size: 30px;
+  margin: auto;
+  color: #009688;
+  font-weight: bold;
+  z-index: 1;
+  position: relative;
+  display: inline-block;
 }
 
-.title_text h1{
-    font-size: 50px;
+.title_text p::after {
+  content: "";
+  width: 50px;
+  height: 35px;
+  background: linear-gradient(#019587, #fff);
+  position: absolute;
+  top: -20px;
+  right: 0;
+  left: 0;
+  z-index: -1;
+  transform: rotate(4deg);
+  border-top-left-radius: 45px;
+  border-bottom-right-radius: 45px;
 }
 
-#features .title_text{
-    width: 100%;
-    text-align: center;
-    margin-top: 40px;
+.title_text h1 {
+  font-size: 50px;
 }
 
-#features .title_text p{
-    font-size: 30px;
-    margin: auto;
-    color: #009688;
-    font-weight: bold ;
-    z-index: 1;
-    position: relative;
-    display: inline-block;
+#features .title_text {
+  width: 100%;
+  text-align: center;
+  margin-top: 40px;
 }
 
-.title_text h1{
-    font-size: 40px;
-    font-weight: 300;
+#features .title_text p {
+  font-size: 30px;
+  margin: auto;
+  color: #009688;
+  font-weight: bold;
+  z-index: 1;
+  position: relative;
+  display: inline-block;
 }
 
-#features .title_text p::after{
-    content: '';
-    width: 50px;
-    height: 35px;
-    background: linear-gradient(#07ac98, #fff);
-    position: absolute;
-    top: -20px;
-    right :0;
-    left: 0;
-    z-index: -1;
-    transform: rotate(4deg);
-    border-top-left-radius: 45px;
-    border-bottom-right-radius: 45px;
-
+.title_text h1 {
+  font-size: 40px;
+  font-weight: 300;
 }
 
-.feature-box{
-    width: 80%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-
-
+#features .title_text p::after {
+  content: "";
+  width: 50px;
+  height: 35px;
+  background: linear-gradient(#07ac98, #fff);
+  position: absolute;
+  top: -20px;
+  right: 0;
+  left: 0;
+  z-index: -1;
+  transform: rotate(4deg);
+  border-top-left-radius: 45px;
+  border-bottom-right-radius: 45px;
 }
 
-.features{
-    flex-basis: 50%;
-
+.feature-box {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
-.features h1{
-    text-align: left;
-    margin-bottom: 10px;
-    font-weight: 100;
-    color: #009688;
-    padding-top: 16px;
-    padding-bottom: 6px;
-
+.features {
+  flex-basis: 50%;
 }
 
-.feature-img{
-    flex-basis: 50%;
-    margin: auto;
+.features h1 {
+  text-align: left;
+  margin-bottom: 10px;
+  font-weight: 100;
+  color: #009688;
+  padding-top: 16px;
+  padding-bottom: 6px;
+}
 
+.feature-img {
+  flex-basis: 50%;
+  margin: auto;
 }
 
 .feature-img img {
-    width: 95%;
-    border-radius: 10px;
-
-
+  width: 95%;
+  border-radius: 10px;
 }
 
-.features desc{
-    align-items: center;
-    margin-bottom: 40px;
-    display: flex;
-
+.features desc {
+  align-items: center;
+  margin-bottom: 40px;
+  display: flex;
 }
 
-.feature-icon .fa{
-    width: 50px;
-    height: 50px;
-    font-size: 30px;
-    line-height: 50px;
-    border-radius: 8px;
-    color: #009688;
-    border: 1px solid #009688;
-    text-align: center;
-
+.feature-icon .fa {
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  line-height: 50px;
+  border-radius: 8px;
+  color: #009688;
+  border: 1px solid #009688;
+  text-align: center;
 }
-.feature-text p{
-    padding: 0 10px 0 10px;
-    text-align: initial;
-    margin: -60px 0px 0px 50px;
-
+.feature-text p {
+  padding: 0 10px 0 10px;
+  text-align: initial;
+  margin: -60px 0px 0px 50px;
 }
 
-#Team{
+ #Team{
     width: 100%;
     padding: 70px 0;
     background-color: #efefef;
 }
 
-.Photos{
-    width: 80%;
+.image {
+  position: relative;
+  width: 50%;
+  max-width: 300px;
+  margin-left: 50px;
+}
+.image img {
+  width: 600px;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: auto;
+  border-radius: 7px;
+}
+.image .image-content {
+  width: 600px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 0.5s ease 0s;
+}
+.image:hover .image-content {
+  background-color: rgba(138, 206, 218, 0.4);
+}
+.image .image-content:after,
+.image .image-content:before {
+  content: "";
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  opacity: 0;
+  transform: scale(1.5);
+  transition: all 0.6s ease 0.3s;
+}
+.image .image-content:before {
+  border-left: 4px solid white;
+  border-top: 4px solid white;
+  top: 19px;
+  left: 19px;
+}
+.image .image-content:after {
+  border-bottom: 4px solid white;
+  border-right: 4px solid white;
+  bottom: 19px;
+  right: 19px;
+}
+.image:hover .image-content:after,
+.image:hover .image-content:before {
+  opacity: 1;
+  transform: scale(1);
+}
+.image .title {
+  font-size: 22px;
+  color: white;
+  margin: 0;
+  position: relative;
+  top: 0;
+  opacity: 0;
+  transition: all 1s ease 10ms;
+  text-align: center;
+}
+.image:hover .title {
+  top: 39%;
+  opacity: 1;
+  transition: all 0.5s cubic-bezier(1, -0.53, 0.405, 1.425) 10ms;
+}
+.image .title:after {
+  content: "";
+  width: 0;
+  height: 1px;
+  background: white;
+  position: absolute;
+  bottom: -8px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  transition: all 1s ease 0s;
+}
+.image:hover .title:after {
+  width: 80%;
+  transition: all 1s ease 0.8s;
+}
+
+.col{
+    flex: 50%;
+    padding: 5px;
+  }
+  .row{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: auto;
+  }
+.row2{
+    display: flex;
+}
+ 
+
+
+#footer {
+  padding: 50px 0 20px;
+  background: #efefef;
 }
 
-.Photos_T{
-    flex-basis: 48%;
-    text-align: center;
-    border-radius: 7px;
-    margin-bottom: 20px;
-    color: #fff;
+.footer_row {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.Photos_T img{
-    width: 100%;
-    border-radius: 7px;
-}   
-#footer{
-    padding: 50px 0 20px;
-    background: #efefef;
-
+.footer_left,
+.footer_right {
+  flex-basis: 45%;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
-.footer_row{
-    width:80%;
-    margin: 0 auto;
-    display : flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.footer_right {
+  text-align: right;
 }
 
-.footer_left, .footer_right{
-    flex-basis: 45%;
-    padding: 10px;
-    margin-bottom: 20px;
+.footer_row h1 {
+  margin: 10px 0;
 }
 
-.footer_right{
-    text-align: right;
+.footer_row p {
+  line-height: 35px;
 }
 
-.footer_row h1{
-    margin: 10px 0;
+.footer_left .fas,
+.footer_right .fas {
+  font-size: 20px;
+  margin: 10px;
+  color: #009688;
 }
 
-.footer_row p{
-    line-height: 35px;
+.Social_links {
+  text-align: center;
 }
 
-.footer_left .fas, .footer_right .fas{
-    font-size: 20px;
-    margin: 10px;
-    color: #009688;
-
+.Social_links .fab {
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  font-size: 30px;
+  line-height: 40px;
+  border: 2px solid #009688;
+  cursor: pointer;
+  margin: 40px 5px 0;
+  color: #009688;
+  transition: 0.5s;
 }
-
-.Social_links{
-    text-align: center;
-}
-
-
-.Social_links .fab{
-    height: 50px;
-    width: 50px;
-    text-align: center;
-    font-size: 30px;
-    line-height: 40px;
-    border: 2px solid #009688;
-    cursor: pointer;
-    margin: 40px 5px 0;
-    color: #009688;
-    transition: 0.5s;
-
-}
-.Social_links .fab:hover{
-    background: #009688;
-    color: #fff;
-    transform: translateY(-7px);
-
+.Social_links .fab:hover {
+  background: #009688;
+  color: #fff;
+  transform: translateY(-7px);
 }
